# smartvision-bot

./: .env  .gitignore  README.md  pyproject.toml  telegrambot.py  test_telegrambot.py
bot/: __init__.py  handlers.py  main.py  utils.py
tests/: test_env.py  test_handlers.py
